--- a/hugo.toml
+++ b/hugo.toml
@@ -36,8 +36,8 @@ enableGitInfo = true
 [menu]
 # [[menu.before]]
 [[menu.after]]
-  name = "8元200G不限时"
-  url = "https://jsjc.cfd/#/register?code=w7rsHzIL"
+  name = "20元1000G不限时"
+  url = "https://一分机场.com/#/register?code=Aqr3awfK"
   weight = 20
 [params]
 # 黑暗模式
