--- a/hugo.toml
+++ b/hugo.toml
@@ -36,8 +36,8 @@ enableGitInfo = true
 [menu]
 # [[menu.before]]
 [[menu.after]]
-  name = "20元1000G不限时"
-  url = "https://一分机场.com/#/register?code=Aqr3awfK"
+  name = "0.5元100G流量"
+  url = "https://portal.mofeiyun.com/#/register?code=ugmD3VWT"
   weight = 20
 [params]
 # 黑暗模式
