--- a/hugo.toml
+++ b/hugo.toml
@@ -36,8 +36,8 @@ enableGitInfo = true
 [menu]
 # [[menu.before]]
 [[menu.after]]
-  name = "0.5元100G流量"
-  url = "https://portal.mofeiyun.com/#/register?code=ugmD3VWT"
+  name = "15元200G不限时"
+  url = "https://www.nfsq.us/#/register?code=RaUmorb2"
   weight = 20
 [params]
 # 黑暗模式
